public/stylesheets/all.css
/* ... */
#edit_group{
    padding: 20px 20px;
}
#edit_group_title{
    font: bold 24px/24px Arial, Helvetica, sans-serif;
    color: #FFFCD5;
    padding-bottom: 5px;
    /*text-decoration: underline;*/
}
#edit_group_text{
    font: normal 14px/14px Arial, Helvetica, sans-serif;
    color: white;
}
.edit-inline-mouseover{
    text-decoration: underline;
}

#groups_holder{
    width: 100%;
    max-width: 550px;
    height: 100%;
}
#group_tag_holder{
    width: 375px;
    height:auto;
    overflow-y: auto;
    padding: 0 5px 0 0px;
}
.group-tag{
    float: left;
    width: 80px;
    height: 108px;
    padding: 2px 10px 2px 0px;
}
.group-tag-icon{
    float:left;
}
.group-tag-name{
    font: bold 12px/12px Arial, Helvetica, sans-serif;
    color: white;
    float: left;
    width: 62px;
    text-align: center;
    padding-top: 2px;
    word-wrap: break-word;
}
.group-tag-remove{
    float: right;
    padding: 4px 2px 0 0;
}

.profile-group-permission-holder{
    width: 500px;
    height: 170px;
    margin: 200px auto 0 auto;
    text-align: center;
}
.show-event-group-permission-holder{
    width: 500px;
    height: 170px;
    margin: 50px auto 0 auto;
    text-align: center;
}

.popup-holder,
#group_permission_holder{
    margin: 100px auto 0 auto;
    text-align: center;
    max-width: 400px;
    position: relative;
}

.popup-holder {
    padding: 10px;
}

.popup-close {
    position: absolute;
    top: 10px;
    right: 5px;
}

.popup-close:hover {
    cursor: pointer;
}

#group_permission_icon{
    margin: 5px 10px 10px 10px;;
    float:left;
}

.popup-text, 
#group_permission_text{
    padding-top: 5px;
    color: white;
    text-align: left;
    font: 16px/16px Arial, Helvetica, sans-serif;
}

popup-fields-holder,
#group_permission_text_field_holder{
    width:90%;
    margin: 0px 0px 0 10px;
}
#group_permission_text_field{
    width:100%;
    height:35px;
}
#group_permission_error{
    color: #FFC233;
    font: bold 14px/14px Arial, Helvetica, sans-serif;
    padding: 10px 0 0 10px;
    text-align: center;
    cursor: pointer;
}
#group_permission_applied{
    color: #BF1F1E;
    font: bold 20px/20px Arial, Helvetica, sans-serif;
    padding: 20px 0 0 10px;
}
#add_group_button{
    padding: 10px 20px 0 0;
    float:right;
    color:#FFC233;
    font: bold 14px/14px Arial, Helvetica, sans-serif;
    cursor: pointer;
}

#edit_group_name{
    background: transparent;
    color: #FFC233;
    width: 280px;
    margin: 10px 0 0 10px;
    height: 60px;
    overflow:hidden;
    font: bold 24px/24px Arial, Helvetica, sans-serif;
    text-align: center;
    float: left;
    padding: 0px;
    border:0px;
}
#edit_group_description{
    background: transparent;
    color: #FFC233;
    width: 360px;
    height: 20px;
    margin: 0;
    font: bold 18px/18px Arial, Helvetica, sans-serif;
    float: left;
    padding: 0px;
    border:0px;
}
#edit_group_contact_name{
    background: transparent;
    color: #FFC233;
    width: 220px;
    height: 20px;
    margin: 0;
    font: bold 18px/18px Arial, Helvetica, sans-serif;
    float: left;
    padding: 0px;
    border:0px;
}
#edit_group_contact_email{
    background: transparent;
    color: #FFC233;
    width: 220px;
    height: 20px;
    margin: 0;
    font: bold 18px/18px Arial, Helvetica, sans-serif;
    float: left;
    padding: 0px;
    border:0px;
}
#edit_group_contact_address{
    background: transparent;
    color: #FFC233;
    width: 200px;
    height: 20px;
    margin: 0;
    font: bold 18px/18px Arial, Helvetica, sans-serif;
    float: left;
    padding: 0px;
    border:0px;
}
#edit_group_contact_phone{
    background: transparent;
    color: #FFC233;
    width: 200px;
    height: 20px;
    margin: 0;
    font: bold 18px/18px Arial, Helvetica, sans-serif;
    float: left;
    padding: 0px;
    border:0px;
}


.content-left-holder .clh-content {
    padding: 20px;
}

.content-left-holder .clh-content h3 {
    font-size: 22px;
    color: #FFC233;
    text-shadow: #4f4f4d 3px 3px 3px;
}

.group-settings-content {    
    /*padding: 10px;*/
    max-width: 1050px;
    margin: 0 auto;
}

.group-settings-content h3 {
    color: #FFC233;
    text-shadow: #4f4f4d 3px 3px 3px;
    font-size: 1.5em;
}

#user_groups_list li {
    float: left;
    margin: 10px;
}

#user_groups_list li span {
    text-align: center;
    font: bold 12px/12px Arial, Helvetica, sans-serif;
    color: white;
    padding: 5px 0 0 5px;
}

.search-text-field {
    width:365px;
    height:24px;
    margin:10px;
    border: 2px solid #4F4F4D;
}

.clh-content label {
    float:left;
    padding-right: 5px;
    color:#FFFCD5;
    font: bold 18px/18px Arial, Helvetica, sans-serif;
}

#user_group_holder input[type=text] {
    background: transparent;
    color: #FFC233;
    width: 200px;
    height: 20px;
    margin: 0;
    font: bold 18px/18px Arial, Helvetica, sans-serif;
    float: left;
    padding: 0px;
    border:0px;
}

